Health check shield API
Draft implementation of the API which temporarly prevents the task from being killed when it's unhealthy.
This is required to support troubleshooting scenarios when the app is "legally" unhealthy, for example when taking a memory dump.

API:
- GET /v2/shield: show current shields
- PUT /v2/shield/<task_id>?ttl=<ttl>: add the shield
- DELETE /v2/shield/<task_id>: remove the shield

TODO:
- do we need to persist shield state ?
- authorization
- ttl tests

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ tools/packager/toor
 tools/packager/fpm-docker/.provisioned
 dcos-registry-*
 .envrc
+.bloop/
+.metals/
+.vscode/
+metals.sbt
+.env
